--- a/src/App.css
+++ b/src/App.css
@@ -6,30 +6,31 @@ div.container-fluid {
     width: 100%;
     background-color: black;
 }
-.container {
-    padding-bottom: 20px;
+p {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.App-content-row {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .App-header {
     z-index: -1;
 }
-.App-home {
-    top-margin: 10%;
-    left-margin: 20%;
-    right-margin: 20%;
-    text-align: center;
-}
-.App-home > div.jumbotron {
-}
 .App-img-logo {
     position: fixed;
-    top: 18px;
+    top: 10px;
+    left: 20px;
     z-index: 2000;
+}
+.App-page-admin {
+
 }
 .App-title {
     z-index: 8999;
     position: absolute;
-    top: 23px;
-    left: 110px;
+    top: 16px;
+    left: 130px;
     color: gold;
     font-size: large;
     font-style: italic;
@@ -38,31 +39,40 @@ div.container-fluid {
     height: 1em;
     width: 1.3em;
 }
+
 #basic-nav-dropdown {
     padding-top: 21px;
     padding-left: 22px;
-    background-color: black;
-}
-.dropdown-menu {
-    background-color: white;
-    position: relative;
-    width: 100%;
-}
-.App-hymnographers-icon {
-    height: 100%;
-    width: 100%;
 }
 .App-search-form {
     padding-top: 15px;
+    padding-bottom: 15px;
 }
 .App-search-panel {
-    cursor: pointer;
 }
 .App-text-search-icon {
     cursor: pointer;
 }
-.panel-title {
+.App-HyperToken {
+}
+.App-HyperToken-Index {
+    font-size: larger;
+}
+.App-HyperToken-Word {
+    color: blue;
     cursor: pointer;
+}
+.App-iframe-wrapper {
+    resize: vertical;
+}
+.App-font-awesome-spinner {
+    color: red;
+}
+.navbar.Collapse {
+    position: fixed;
+    top: 6px;
+    left: 500px;
+    right: 0;
 }
 .navbar-brand {
     display: flex;
@@ -70,10 +80,17 @@ div.container-fluid {
 }
 .navbar-brand>img {
 }
+.navbar-header {
+    padding-left: 20px;
+}
+.navbar-nav {
+    padding-top: 30px;
+}
 
 .panel-title {
-    color: #007eff;
+    color: #007eff !important;
     font-weight: bolder;
+    cursor: pointer;
 }
 
 .label-warning {
@@ -116,7 +133,7 @@ a.collapsed {
     color: black;
     background-color: white;
     height: auto;
-    width: 80%;
+    width: 76%;
     resize: vertical;
 }
 .App-search-by-id-parts-icon {
@@ -145,11 +162,14 @@ a.collapsed {
 .App-search-checkbox {
     margin: 10px;
 }
+.react-bs-table-container {
+    padding: 14px;
+}
 .react-bs-table table tr {
-    padding: 10px;
+    max-width: 80%;
 }
 .react-bs-table table td {
-    white-space: -o-pre-wrap;
+    white-space: -o-pre-wrap !important;
     word-wrap: break-word;
     white-space: pre-wrap;
     white-space: -moz-pre-wrap;
@@ -183,12 +203,9 @@ a.collapsed {
     position: absolute;
 }
 div[class*='App-page'] {
-    margin-top: 80px;
+    margin-top: 105px;
 }
-.navbar-nav {
-    background-color: black;
-}
-@media (max-width: 1300px) {
+@media (max-width: 1200px !important) {
     .App-img-logo {
         top: 9px;
     }
@@ -203,18 +220,19 @@ div[class*='App-page'] {
         float: none !important;
     }
     .navbar-toggle {
-        display: block;
+        display: block !important;
     }
     .navbar-collapse {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+        width: 20px;
     }
     .navbar-fixed-top {
         top: 0;
         border-width: 0 0 1px;
     }
     .navbar-collapse.collapse {
-        display: none!important;
+        display: none;
     }
     .navbar-nav {
         float: none!important;
@@ -230,9 +248,148 @@ div[class*='App-page'] {
     .collapse.in{
         display:block !important;
     }
-    .App-submenu-item {
-    }
 }
+
 div.App-logo.navbar-header {
     overflow: scroll;
 }
+
+.App-demo-version {
+    margin-left: 20px;
+    color: #5bc0de;
+}
+.App-Para-Col-Editor .resourceSelector {
+    padding-left: 15px;
+}
+.App-table-filter-clear {
+    float: right;
+}
+.Select-control {
+    max-width: 80%;
+}
+.App-Label-Selector-POS .Select-control{
+    float: left;
+    width: 45ch;
+}
+.App-Label-Selector-Tense .Select-control {
+    width: 45ch;
+}
+.App-Label-Selector-Voice .Select-control {
+    width: 45ch;
+}
+.App-Label-Selector-Mood .Select-control {
+    width: 45ch;
+}
+.App-Label-Selector-Gender .Select-control {
+    width: 45ch;
+}
+.App-Label-Selector-Number .Select-control {
+    width: 45ch;
+}
+.App-Label-Selector-Case .Select-control {
+    width: 45ch;
+}
+.App-WordTagger-Lemma {
+    width: 45ch;
+}
+.App-WordTagger-Gloss {
+    width: 45ch;
+}
+.App-data-tr {
+    max-width: 90%;
+}
+
+textarea { resize: both; }
+
+svg {
+    background-color: black;
+}
+.node circle {
+    fill: #F3F3FF;
+    stroke: #2593B8;
+    stroke-width: 1.5px;
+}
+
+.node text {
+    font-size: 11px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color: #444;
+    fill: gold;
+    text-shadow: 0 1px 4px black;
+}
+
+path.link {
+    fill: none;
+    stroke: #2593B8;
+    stroke-width: 1.5px;
+}
+
+.AppDependencyNode {
+    cursor: pointer;
+}
+
+.AppDependencyNodeToken {
+    color: blue;
+    font-size: large;
+}
+.AppDependencyNodeLemma {
+    color: blue;
+    font-size: small;
+}
+.AppDependencySelectedNode {
+    background-color: #bfe6ff;
+}
+.AppDependencyNodeGloss {
+    font-size: small;
+}
+.AppDependencyNodeLabel {
+    text-align: center;
+    color: red;
+    font-style: italic;
+    font-size: xx-small;
+}
+.App-Modal-Para-Row-Editor {
+    width: 90vw;
+}
+.App-modal-body {
+    background-color: #eaeced;
+}
+.alert {
+    margin-top: 10px;
+}
+.App-modal-alert {
+    margin: 10px;
+}
+.glyphicon {
+    padding-right: 10px;
+}
+.App-Selection-Row {
+    margin-top: 10px;
+    width: 100%;
+}
+.App-Ages-Table-Row {
+    margin-top: 10px;
+}
+.App-Info-Row {
+    margin-top: 10px;
+}
+.App-Grid {
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 100%;
+}
+.App-Modal-Editor-TextArea {
+    width: 100%;
+}
+
+.App-page-home-welcome-title {
+    text-align: center;
+    color: blue;
+}
+
+.App-page-home-welcome-text {
+    padding-left: 20px;
+}
+
