--- a/src/Demo.css
+++ b/src/Demo.css
@@ -13,29 +13,22 @@ div.container {
     padding-right: 10px;
     width: 100%;
 }
-.App {
-    margin-right: 0px;
-    margin-left: 0px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
 .App-header {
+    z-index: -1;
 }
 .App-img-logo {
+    position: fixed;
+    top: 18px;
+    z-index: 2000;
 }
-.App-page-admin {
-
-}
-.App-nav-dropdown {
-    position: relative;
-    top: -5px;
-}
-.App-title-full {
+.App-title {
+    z-index: 8999;
+    position: absolute;
+    top: 23px;
+    left: 110px;
     color: gold;
+    font-size: large;
     font-style: italic;
-}
-.App-title-short {
-    display: none;
 }
 .App-flag {
     height: 1em;
@@ -58,9 +51,6 @@ div.container {
 #basic-nav-dropdown {
     padding-top: 21px;
     padding-left: 22px;
-}
-.App-search {
-    margin: 10px;
 }
 .App-search-form {
     padding-top: 15px;
@@ -131,42 +121,14 @@ div.container {
 }
 .navbar-brand {
     display: flex;
-    position: relative;
-    top: -8px;
+    align-items: center;
 }
 .navbar-brand>img {
 }
-.navbar-header {
-    z-index: 2000;
-}
-.navbar-nav {
-    align-items: right !important;
-    font-size: 100%;
-}
-.modal-title {
-    font-size: smaller;
-    padding-bottom: 10px;
-    color: #5bc0de;
-}
-.App-Notes-Lister {
-    margin-top: 0px !important;
-}
-.Select {
-    max-width: 90vw;
-}
-.Schema-Based-Add-Button {
-    margin-left: 10px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding: 0;
-}
-.App-Add-ico {
-    padding: 5px !important;
-}
+
 .panel-title {
-    color: #007eff !important;
+    color: #007eff;
     font-weight: bolder;
-    cursor: pointer;
 }
 
 .label-warning {
@@ -216,13 +178,10 @@ a.collapsed {
 .App-Search-Options-Text-Div {
 }
 .App-search-text-input {
-    color: black;
-    background-color: white;
     height: auto;
     padding-left: 12px;
-    width: 90vw;
+    width: 80%;
     box-sizing: border-box;
-    resize: vertical;
 }
 .App-search-by-id-parts-icon {
     color: black;
@@ -234,16 +193,8 @@ a.collapsed {
     resize: vertical;
 }
 
-.modal-dialog {
-    margin: 5vw !important;
-    width: 90vw !important;
-}
-.App-search-form {
-    background-color: #eaeced;
-}
-
 .App-search-results {
-    margin: 10px;
+    background-color: #eaeced;
 }
 
 .App-ParaRow-Text-Editor {
@@ -285,13 +236,6 @@ a.collapsed {
     color: red;
 }
 
-.App-header-ico {
-    margin: 0px;
-    padding: 0px;
-}
-.App-header-sub-item-ico {
-    padding-right: 10px;
-}
 .App-header-ico.fa-info-circle {
     color: inherit;
 }
@@ -311,27 +255,16 @@ div[class*='App-page'] {
     margin: 5vw !important;
     width: 90vw !important;
 }
-@media screen
-  and (max-width: 820px)
-    and (min-width: 200px)
-{
+@media (max-width: 875px) {
     .App-img-logo {
+        top: 9px;
     }
-    .App-title-full {
-        display: none;
-    }
-    .App-title-short {
-        display: inline;
-        color: gold;
-        font-style: italic;
-        margin-top: 10px;
-    }
-    .navbar-brand {
-        display: flex;
-        position: relative;
-        top: -8px;
+    .App-title {
+        top: 14px;
+        font-size: 15px;
     }
     .navbar-header {
+        z-index: 2000;
         float: none;
     }
     .navbar-left,.navbar-right {
@@ -400,19 +333,9 @@ div.App-logo.navbar-header {
     margin-left: 20px;
     color: #5bc0de;
 }
-.App-Grammar-Well {
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-.App-Modal-Dependency-Diagram-Title {
-    color: blue;
-    font-weight: bold;
-}
 .App-Para-Col-Editor {
     padding-left: 15px;
-}
-.App-ParaRow-Text-Editor {
-    background-color: #eaeced;
+    max-width: 60vw;
 }
 .resourceSelector {
     max-width: 80%;
@@ -498,30 +421,6 @@ path.link {
     stroke-width: 1.5px;
 }
 
-.AppDependencyNode {
-    cursor: pointer;
-}
-
-.AppDependencyNodeToken {
-    color: blue;
-    font-size: large;
-}
-.AppDependencyNodeLemma {
-    color: blue;
-    font-size: small;
-}
-.AppDependencySelectedNode {
-    background-color: #bfe6ff;
-}
-.AppDependencyNodeGloss {
-    font-size: small;
-}
-.AppDependencyNodeLabel {
-    text-align: center;
-    color: red;
-    font-style: italic;
-    font-size: xx-small;
-}
 .App-Modal-Para-Row-Editor {
     width: 90vw;
 }
@@ -551,7 +450,7 @@ path.link {
     width: 100%;
 }
 .App-Ages-Table-Row {
-    margin: 10px;
+    margin-top: 10px;
 }
 .App-Info-Row {
     margin-top: 10px;
@@ -565,15 +464,6 @@ path.link {
 }
 .App-Modal-Editor-TextArea {
     width: 100%;
-}
-
-.App-page-home-welcome-title {
-    text-align: center;
-    color: blue;
-}
-
-.App-page-home-welcome-text {
-    padding-left: 20px;
 }
 .boxsizingBorder {
     -webkit-box-sizing: border-box;
