--- a/src/old.css
+++ b/src/old.css
@@ -6,94 +6,46 @@ div.container-fluid {
     width: 100%;
     background-color: black;
 }
-div.container {
-    margin-right: 0px;
-    margin-left: 0px;
+p {
     padding-left: 10px;
     padding-right: 10px;
-    width: 100%;
 }
-.App {
-    margin-right: 0px;
-    margin-left: 0px;
+.App-content-row {
     padding-left: 10px;
     padding-right: 10px;
 }
 .App-header {
+    z-index: -1;
 }
 .App-img-logo {
 }
 .App-page-admin {
 
 }
-.App-nav-dropdown {
-    position: relative;
-    top: -5px;
-}
 .App-title-full {
+    z-index: 8999;
+    position: absolute;
+    top: 16px;
     color: gold;
     font-style: italic;
 }
 .App-title-short {
-    display: none;
+    display:none;
 }
 .App-flag {
     height: 1em;
     width: 1.3em;
 }
 .App-Modal-Para-Row-Editor {
-    width: 80vw;
-}
-.modal-title {
-    font-size: small;
-    padding-bottom: 10px;
-    color: #5bc0de;
-}
-.modal-content {
-    max-width: 95vw;
-}
-.modal-container .modal, .modal-container .modal-backdrop {
-    position: absolute;
+    width: 90vw;
 }
 #basic-nav-dropdown {
     padding-top: 21px;
     padding-left: 22px;
 }
-.App-search {
-    margin: 10px;
-}
 .App-search-form {
     padding-top: 15px;
     padding-bottom: 15px;
-    position: relative;
-    background-color: #eaeced;
-}
-.App-Template-Editor-Button {
-    margin: 2px;
-}
-.App-Template-Editor-Node-Button {
-    color: #2e6da4;
-    margin-right: 2px;
-}
-.App-InputGroup-Static {
-    background-color: white;
-    border-color: #2e6da4;
-}
-.App-Template-Editor-Input {
-    background-color: yellow;
-    padding-bottom: 10px;
-}
-.rst__rowTitle {
-    color: #5bc0de;
-}
-.rst__rowTitleWithSubtitle {
-    color: #5bc0de;
-    margin-bottom: 2px !important;
-}
-.rst__rowSubtitle {
-    font-weight: bold;
-    padding-top: 30px !important;
-    margin-top: 10px !important;
 }
 .App-search-panel {
 }
@@ -109,30 +61,24 @@ div.container {
     color: blue;
     cursor: pointer;
 }
-.App-HyperToken-Word-Selected {
-    color: blue;
-    background-color: #bce8f1;
-    cursor: pointer;
-}
 .App-iframe-wrapper {
     resize: vertical;
 }
 .App-font-awesome-spinner {
     color: red;
 }
-.panel-title {
-    cursor: pointer;
-}
-.Navbar.Collapse {
+.navbar.Collapse {
     position: fixed;
     top: 6px;
-    left: 500px;
-    right: 0;
 }
+.navbar.container {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .navbar-brand {
     display: flex;
-    position: relative;
-    top: -8px;
+    align-items: center;
 }
 .navbar-brand>img {
 }
@@ -183,15 +129,7 @@ a.collapsed {
 .control-label,  .resourceSelectorPrompt {
     color: #5bc0de;
 }
-.App-Notes-Lister {
-    margin-top: 0px !important;
-}
-.Schema-Based-Add-Button {
-    padding: 1px;
-}
-.App-Add-ico {
-    padding: 5px !important;
-}
+
 .App-login {
     margin: 20%;
 }
@@ -220,7 +158,7 @@ a.collapsed {
     background-color: white;
     height: auto;
     padding-left: 12px;
-    width: 90vw;
+    width: 80%;
     box-sizing: border-box;
     resize: vertical;
 }
@@ -243,12 +181,9 @@ a.collapsed {
 }
 
 .App-search-results {
-    margin: 10px;
-}
-
-.App-ParaRow-Text-Editor {
     background-color: #eaeced;
 }
+
 .row {
     margin: 0px;
 }
@@ -256,8 +191,10 @@ a.collapsed {
 .App-search-checkbox {
     margin: 10px;
 }
+.react-bs-table-container {
+    padding: 14px;
+}
 .react-bs-table table tr {
-    padding: 10px;
     max-width: 80%;
 }
 .react-bs-table table td {
@@ -285,53 +222,37 @@ a.collapsed {
     color: red;
 }
 
-.App-header-ico {
-    margin: 0px;
-    padding: 0px;
-}
-.App-header-sub-item-ico {
-    padding-right: 10px;
-}
 .App-header-ico.fa-info-circle {
     color: inherit;
 }
-.App-Well-From-Text {
-    margin-bottom: 0px;
+.modal-container {
+    position: relative;
 }
-.App-Well-To-Text {
-}
-.App-Text-Refers-To {
-    color: #5bc0de;
-    padding-left: 20px;
+.modal-container .modal, .modal-container .modal-backdrop {
+    position: absolute;
 }
 div[class*='App-page'] {
-    margin-top: 80px;
+    margin-top: 105px;
 }
-.modal-dialog {
-    margin: 5vw !important;
-    width: 90vw !important;
+.caret {
+    border-top: 4px solid !important;
 }
-@media screen
-  and (max-width: 820px)
-    and (min-width: 200px)
-{
+@media (max-width: 820px !important) {
     .App-img-logo {
-    }
-    .App-title-full {
-        display: none;
+        position: relative;
+        top: -10px;
     }
     .App-title-short {
-        display: inline;
-        color: gold;
-        font-style: italic;
-        margin-top: 10px;
-    }
-    .navbar-brand {
-        display: flex;
         position: relative;
-        top: -8px;
+        top: -10px;
+        color: red;
+        font-size: 1vmax;
+    }
+    .App-title-full {
+        display:none;
     }
     .navbar-header {
+        z-index: 2000;
         float: none;
     }
     .navbar-left,.navbar-right {
@@ -366,35 +287,13 @@ div[class*='App-page'] {
         display:block !important;
     }
 }
+
 div.App-logo.navbar-header {
+    z-index: 2000;
     overflow: scroll;
 }
-.indent {
-    width: 0 !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-}
-.list-group-item {
-      padding-left: 0 !important;
-      margin: 0 !important;
-}
-.treeview {
-    padding-left: 1px !important;
-    margin-left: 1px !important;
-}
-.list-group {
-    padding-left: 0 !important;
-    margin-left: 0 !important;
-}
-.App-Modal-Dependency-Diagram {
-    width: 95vw;
-}
-.treeview {
+.App-DependencyDiagram-Container {
     overflow: scroll;
-}
-.App-DependencyDiagram-Well {
-    margin-left: 0 !important;
-    padding-left: 0 !important;
 }
 .App-demo-version {
     margin-left: 20px;
@@ -415,17 +314,16 @@ div.App-logo.navbar-header {
     background-color: #eaeced;
 }
 .resourceSelector {
-    max-width: 80%;
+    padding-left: 15px;
 }
 .App-table-filter-clear {
     float: right;
 }
-.Select {
-    max-width: 90vw;
+.Button-Select-FontAwesome {
+    padding-left: 0px;
 }
-.App-Grammar-Well {
-    padding-top: 15px;
-    padding-bottom: 15px;
+.Select-control {
+    max-width: 80%;
 }
 .App-Label-Selector-POS .Select-control{
     float: left;
@@ -440,30 +338,40 @@ div.App-logo.navbar-header {
     width: 45ch;
 }
 .App-Label-Selector-Person .Select-control {
+    float: left;
     width: 45ch;
 }
 .App-Label-Selector-Tense .Select-control {
+    float: left;
     width: 45ch;
 }
 .App-Label-Selector-Voice .Select-control {
+    float: left;
     width: 45ch;
 }
 .App-Label-Selector-Mood .Select-control {
+    float: left;
     width: 45ch;
 }
 .App-Label-Selector-Gender .Select-control {
+    float: left;
     width: 45ch;
 }
 .App-Label-Selector-Number .Select-control {
+    float: left;
     width: 45ch;
 }
 .App-Label-Selector-Case .Select-control {
+    float: left;
     width: 45ch;
+    max-width: 50%;
 }
 .App-TokenTagger-Lemma {
- width: 45ch;
+    float: left;
+    width: 45ch;
 }
 .App-TokenTagger-Gloss {
+    float: left;
     width: 45ch;
 }
 .App-Label-Selector-Help {
@@ -525,15 +433,6 @@ path.link {
 .App-Modal-Para-Row-Editor {
     width: 90vw;
 }
-.App-Modal-Id-Builder {
-    width: 90vw;
-}
-.App-id-builder {
-    width: 85vw;
-}
-.App-id-builder-header {
-    width: 85vw;
-}
 .App-modal-body {
     background-color: #eaeced;
 }
@@ -551,7 +450,7 @@ path.link {
     width: 100%;
 }
 .App-Ages-Table-Row {
-    margin: 10px;
+    margin-top: 10px;
 }
 .App-Info-Row {
     margin-top: 10px;
@@ -579,35 +478,4 @@ path.link {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-}
-.Button-Select {
-    margin: 2px;
-}
-.Button-Select-FontAwesome {
-    padding-left: 0px;
-}
-.Button-Cancel {
-    margin: 2px;
-}
-.App-DependencyDiagram-Node-Key {
-    padding-left: 4px;
-}
-.App-DependencyDiagram-Node-Label {
-    color: firebrick;
-    padding-left: 4px;
-}
-.App-DependencyDiagram-Node-Token {
-    font-weight: bold;
-    padding-left: 4px;
-}
-.App-DependencyDiagram-Node-Gloss {
-    color: darkgreen;
-    padding-left: 4px;
-}
-.App-DependencyDiagram-Node-Grammar {
-    color: black;
-    padding-left: 4px;
-}
-.App-DependencyDiagram-Node-Lemma {
-    padding-left: 4px;
 }
