--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ span.App {
 .App-footer-app-name {
     font-style: italic;
 }
-.App-img-logo-ocmc {
+.App-img-logo {
     margin-top: 3px;
 }
 .App-page-about {
