--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,10 @@ a.collapsed {
 .App-search-checkbox {
     margin: 10px;
 }
+.react-bs-table-container {
+    margin-left: 20px;
+    margin-right: 20px;
+}
 .react-bs-table table tr {
     padding: 10px;
     max-width: 80%;
@@ -378,9 +382,7 @@ div[class*='App-page'] {
         padding-left: 0px;
     }
     .App-img-logo {
-        height: 40px;
-        width: 40px;
-        margin-top: -2px;
+        margin-top: -4px;
         margin-right: 8px;
     }
     .App-title-full {
@@ -625,7 +627,7 @@ path.link {
     margin-top: 10px;
 }
 .App-modal-alert {
-    margin: 10px;
+    margin: 20px;
 }
 .glyphicon {
     padding-right: 10px;
